objects/TracRTC__Report_Summary__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Report_ID__c</fullName>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Summary__c</fullName>
        <label>Summary</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Total__c</fullName>
        <label>Total</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Report Summary</label>
    <listViews>
        <fullName>TracRTC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>